--- a/action.yml
+++ b/action.yml
@@ -40,8 +40,9 @@ inputs:
     description: 'Determines if --tags is used'
     required: false
   tags_only:
-    description: 'Set to true if you don't want to push to current branch'
+    description: "Set to true if you don't want to push to current branch"
     requred: false
+    type: boolean
   directory:
     description: 'Directory to change to before pushing.'
     required: false
